css/main.css
body {
    height: 100%;
    width: 100%;
    position: absolute;
}

button:focus {outline:0 !important;}

.fa-stack{
    width: 1.28571em;
}

.icon-white {
    color: white;
}
.icon-bot-text { margin-top: 1.3em; font-size: 10px;}
.icon-top-text { margin-top: -1.3em; font-size: 10px; }

.btn-ctl {
    padding: 15px 12px;
    border-radius: 4px;
}

.btn-jog {
    padding: 15px 11px;
    border-radius: 4px;
}

.btn-numpad {
    padding: 14px 17px;
    border-radius: 4px;
}

.numero {
  font-weight: bold;
  font-size: 16px;
}

.del  {
  font-weight: bold;
  font-size: 16px;
}

.clear {
  font-weight: bold;
  font-size: 16px;
}

.neg {
  font-weight: bold;
  font-size: 16px;
}

.cancel {
  font-weight: bold;
  font-size: 16px;
}

.done {
  font-weight: bold;
  font-size: 16px;
}

.sep {
  font-weight: bold;
  font-size: 16px;
}



/*for Desktops*/
@media all and (min-width : 1100px) {
  #container1 {
      float:left;
      width:100%;
      height: 100%;
      padding: 0px;
  }
  #col1 {
      border-right: dashed 1px #aaa;
      float:left;
      width:20%;
      height: 100%;
      padding: 10px 5px 5px 0px;
      overflow-y: auto;
      overflow-x: none;
      overflow-x: hidden;
  }
  #col2 {
      float:left;
      width:60%;
      height: calc(100% - 80px);
      padding: 10px;
  }
  #col3 {
      border-left: dashed 1px #aaa;
      float:left;
      width:20%;
      height: 100%;
      padding: 5px;
  }
}

/*for small screens (pi hdmi, pipox9 etc)*/
@media not all and (min-width : 1100px) {
  #container1 {
      float:left;
      width:100%;
      height: 100%;
      padding: 5px;
  }
  #col1 {
      float:left;
      width:26%;
      height: 100%;
      padding: 10px 5px 5px 0px;
      overflow-y: auto;
      overflow-x: none;
      overflow-x: hidden;
  }
  #col2 {
      float:left;
      width:50%;
      height: calc(100% - 80px);
      padding: 10px;
  }
  #col3 {
      float:left;
      width:24%;
      height: 100%;
      padding: 5px;
  }
}

#renderArea {
    /*background-color: #ffffff;*/
    /*position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border: 1px #000;
    float: left;
    margin-right: 1%;
    z-index: -3;*/
    display:inline-block;
    min-width: 100% !important;
	  min-height: 100% !important;
    cursor: none;
    border-bottom: dashed 1px #aaa;
}

#rasterArea {
    background-color: #ffffff;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border: 1px #000;
    float: left;
    margin-right: 1%;
}
/*#mobileRenderArea {
    float: none;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 0px;
}*/
.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: pointer;
    display: block;
}

.dro {
    background-color: #ffffff;
    text-align: left;
    padding-left: 15px;
    margin-bottom: 5px;
    font-size: 20px;
    width: 98%;
    border: 1px solid #aaa;
    font-weight: bold;
    margin-left: 5px;
    margin-right: 5px;
}
#console {
    height: calc(100% - 210px);
    width: 100%;
    overflow-y: auto;
    overflow-x: none;
    text-align: left;
    background-color: #fff;
    padding: 5px;
    font-size: 10px;
    /*word-break: break-all;*/
    white-space:normal;
    border-top: dashed 1px #aaa;
    border-bottom: dashed 1px #aaa;
    margin-top: 5px;
}
.pf {
    /*white-space: pre;*/
}
.ui-slider {
    background: #ccc;
}

 .ui-slider-handle {
   -ms-touch-action: none;
touch-action: none;
 }

.settingstable {
    counter-reset: rowNumber;
}
.settingstable tr:not(:first-child) {
    counter-increment: rowNumber;
}
.settingstable tr td:first-child::before {
    content: counter(rowNumber);
    min-width: 1em;
    margin-right: 0.5em;
}

/* Badget over Glyphs */

.badge-notify {
    background-color: #cc0000;
    position:relative;
   bottom: 5px;
   right: 0px;
}

d-grid {border: none; padding: 20px;}
			.nmpd-grid>tbody>tr>td {border: none;}

			/* Some custom styling for Bootstrap */
			.qtyInput {display: block;
			  width: 100%;
			  padding: 6px 12px;
			  color: #555;
			  background-color: white;
			  border: 1px solid #ccc;
			  border-radius: 4px;
			  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
			  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
			  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
			  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
			  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}

.modal-backdrop
{
    opacity:0.1 !important;
}

